# qucsator

./: .gitignore  BUGS  CMakeLists.txt  ChangeLog  FAQ.md  NEWS  README  RELEASE  THANKS  config.h.cmake  configure.ac
cmake/modules/: AC_HEADER_STDC.cmake
contrib/: net.sourceforge.qucs.qucsator.desktop
src/: CMakeLists.txt  MakeList  acsolver.cpp  acsolver.h  analyses.h  analysis.h  applications.h  check_mdl.h  check_netlist.h  check_zvr.h  circuit.cpp  compat.h  constants.h  dcsolver.cpp  devstates.cpp  devstates.h  equation.cpp  evaluate.cpp  exceptionstack.h  fourier.h  gperfappgen.cpp  hbsolver.cpp  hbsolver.h  input.cpp  integrator.h  logging.h  module.cpp  module.h  nasolver.cpp  nasolver.h  net.cpp  netdefs.h  object.h  poly.h  property.h  range.h  states.h  tmatrix.h  tridiag.cpp  trsolver.cpp  (+3 more)
src/cmake/: checkTypeSize.cmake  checks.cmake  dependencies.cmake  generateGPerfAppHashCpp.cmake  generateLexerParserFiles.cmake
src/components/: CMakeLists.txt  MakeList  components.h  spfile.cpp
src/components/devices/: CMakeLists.txt  MakeList  diode.cpp
src/components/digital/: CMakeLists.txt  MakeList
src/components/microstrip/: CMakeLists.txt  MakeList  msrstub.cpp
src/components/verilog/: CMakeLists.txt  DLS_1ton.va  DLS_nto1.va  EKV26MOS.va  MESFET.va  MakeList  andor4x2.va  andor4x3.va  andor4x4.va  binarytogrey4bit.va  comp_1bit.va  comp_2bit.va  comp_4bit.va  dff_SR.va  dmux2to4.va  dmux3to8.va  dmux4to16.va  fa1b.va  fa2b.va  gatedDlatch.va  greytobinary4bit.va  ha1b.va  hpribin4bit.va  jkff_SR.va  log_amp.va  logic_0.va  logic_1.va  mod_amp.va  mux2to1.va  mux4to1.va  mux8to1.va  nigbt.va  pad2bit.va  pad3bit.va  pad4bit.va  photodiode.va  phototransistor.va  potentiometer.va  tff_SR.va  vcresistor.va
src/converter/: CMakeLists.txt  MakeList  parse_spice.ypp
src/interface/: CMakeLists.txt  MakeList  mextrsolver.cpp
src/math/: CMakeLists.txt  MakeList  complex.h  matrix.cpp  precision.h  real.h
